--- a/settings.json
+++ b/settings.json
@@ -7,19 +7,19 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
+	"ownerNumber": "6285710133103",
+	"ownerNumberr": "6285710133103",
+	"cr": "Litaa",
 	"yt":"bit.ly/ytzeeoneofc",
 	"grub": "bit.ly/gczeeoneofc",
 	"wa": "bit.ly/wazeeoneofc",
 	"donate": "bit.ly/dtzeeoneofc",
 	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
+	"ownername": "Litaa",
 	"botname":"ΛᄂPΉΛ BӨƬ",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"Alphabot.jpg",
 	"fakethumb":"Alphabot.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  Alphabot  」\nCreated By Litaa"
 }
