--- a/settings.json
+++ b/settings.json
@@ -7,19 +7,19 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6285710133103",
-	"ownerNumberr": "6285710133103",
-	"cr": "Litaa",
+	"ownerNumber": "6281236125984",
+	"ownerNumberr": "6281236125984",
+	"cr": "Deky uBae",
 	"yt":"bit.ly/ytzeeoneofc",
 	"grub": "bit.ly/gczeeoneofc",
 	"wa": "bit.ly/wazeeoneofc",
 	"donate": "bit.ly/dtzeeoneofc",
 	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "Litaa",
-	"botname":"ΛᄂPΉΛ BӨƬ",
+	"ownername": "Deky uBae",
+	"botname":"SOI - BOT",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"IMG-20211027-WA0048-min.jpg",
 	"fakethumb":"IMG-20211027-WA0048-min.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By Litaa"
+	"fake": " 「  SOI - BOT  」\nCreated By Deky uBae"
 }
