--- a/settings.json
+++ b/settings.json
@@ -19,7 +19,7 @@
 	"ownername": "Deky uBae",
 	"botname":"SOI - BOT",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
-	"thumb":"IMG-20211027-WA0048-min.jpg",
-	"fakethumb":"IMG-20211027-WA0048-min.jpg", 
+	"thumb":"IMG-20210921-WA0022.jpg",
+	"fakethumb":"IMG-20210921-WA0022.jpg", 
 	"fake": " 「  SOI - BOT  」\nCreated By Deky uBae"
 }
