--- a/settings.json
+++ b/settings.json
@@ -1,25 +1,25 @@
 {
-    "self_mode": false,
+    "self_mode": true,
 	"autobio": true,
 	"antihidetag": true,
-	"user_register": false,
+	"user_register": true,
 	"antidelete" : false,
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6281236125984",
-	"ownerNumberr": "6281236125984",
-	"cr": "Deky uBae",
+	"ownerNumber": "62887435047326",
+	"ownerNumberr": "62887435047326",
+	"cr": "@ZeeoneOfc",
 	"yt":"bit.ly/ytzeeoneofc",
 	"grub": "bit.ly/gczeeoneofc",
 	"wa": "bit.ly/wazeeoneofc",
 	"donate": "bit.ly/dtzeeoneofc",
 	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "Deky uBae",
-	"botname":"SOI - BOT",
+	"ownername": "ZeeoneOfc",
+	"botname":"ΛᄂPΉΛ BӨƬ",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
-	"thumb":"IMG-20210921-WA0022.jpg",
-	"fakethumb":"IMG-20210921-WA0022.jpg", 
-	"fake": " 「  SOI - BOT  」\nCreated By Deky uBae"
+	"thumb":"Alphabot.jpg",
+	"fakethumb":"Alphabot.jpg", 
+	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
 }
