--- a/settings.json
+++ b/settings.json
@@ -19,7 +19,7 @@
 	"ownername": "ZeeoneOfc",
 	"botname":"ΛᄂPΉΛ BӨƬ",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
-	"thumb":"Alphabot.jpg",
-	"fakethumb":"Alphabot.jpg", 
+	"thumb":"IMG_20211001_074948_766-min.jpg",
+	"fakethumb":"IMG_20211001_074948_766-min.jpg", 
 	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
 }
